# kubemq-rayserve

./: README.md  pyproject.toml
examples/: README.md
examples/async_inference/: basic_enqueue.py  batch_enqueue.py  consumer_concurrency.py  handler_return_types.py  long_running_task.py  multiple_handlers.py  result_expiry.py  result_polling_patterns.py  task_with_args.py  task_with_kwargs.py  task_with_mixed_args.py
examples/autoscaling/: autoscaling_with_auth.py  custom_tasks_per_replica.py  monitor_scaling_decisions.py  queue_depth_policy.py
examples/cancel_task/: cancel_and_check_status.py  soft_cancel.py
examples/config/: all_config_options.py  consumer_poll_timeout.py  max_message_size.py  result_channel_prefix.py  sync_inference_timeout.py
examples/connection/: auth_token.py  basic_connection.py  custom_address.py  custom_client_id.py  env_var_config.py  health_check.py  mtls_setup.py  tls_setup.py
examples/error_handling/: connection_error.py  dlq_monitoring_callback.py  graceful_shutdown.py  handler_exception.py  malformed_message.py  reconnection_behavior.py  result_storage_failure.py  retries_exhausted_dlq.py  serialization_error.py  timeout_handling.py
examples/kubernetes/: configmap-adapter.yaml  helm-values.yaml  keda-scaled-object.yaml  kubemq-broker.yaml  ray-cluster.yaml  ray-service.yaml  secret-auth.yaml
examples/metrics/: basic_metrics.py  metrics_dashboard.py  processing_duration_stats.py  queue_depth_monitoring.py
examples/ml_patterns/: ab_model_testing.py  batch_inference.py  embedding_pipeline.py  gpu_multi_model.py  image_classification_pipeline.py  llm_inference.py  model_versioning.py  text_to_speech.py
examples/patterns/: fan_out.py  pipeline_chain.py  priority_queues.py  scatter_gather.py  work_distribution.py
examples/progress_tracking/: basic_progress.py  multi_stage_progress.py  progress_subscriber.py  progress_with_detail.py
examples/quickstart/: hello_world.py  progress_hello_world.py  sync_hello_world.py
(+34 files in other folders)
