[project]
name = "kubemq-rayserve"
version = "1.0.0"
description = "KubeMQ adapter for Ray Serve async inference"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "KubeMQ"}]
keywords = ["kubemq", "ray-serve", "inference", "async", "message-broker", "kubernetes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "kubemq>=4.1.2",
    "ray[serve]>=2.50.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0"]  # Reserved for v1.1 result backend alternative
flask = ["flask>=3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kubemq_rayserve"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v --timeout=30"
markers = [
    "integration: integration tests that require a live KubeMQ broker",
    "e2e: end-to-end tests that require a live KubeMQ broker + Ray Serve",
    "unit: fast unit tests with mocked dependencies",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["kubemq_rayserve"]

[tool.coverage.report]
fail_under = 95

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0",
    "pytest-timeout>=2.0",
    "ruff>=0.4",
    "flask>=3.0",
]
